# mandalart-api

./: .gitignore  Dockerfile  database.py  deploy.py  deploy.sh  deploy_util.py  docker-compose-blue.yml  docker-compose-green.yml  logging_config.json  main.py  models.py  pyproject.toml  readme.md  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: default-issue-template.md
.github/workflows/: main-build.yml  mypy.yml  pytest.yml
repositories/: test.py
service/: test.py
src/: database.py  dependencies.py  enums.py  jwt.py  logger.py  main.py  oauth.py  scheduler.py  transaction.py
src/errors/: error.py  exceptions.py
src/lib/: generateid.py
src/models/: cell.py  kakaologinapi.py  response.py  sheet.py  todo.py  token.py  user.py
src/repositories/: __init__.py  base.py  cell.py  sheet.py  test.py  todo.py  user.py
src/schemas/: __init__.py  cell.py  models.py  sheet.py  todo.py  user.py
src/services/: __init__.py  cell.py  login.py  sheet.py  test.py  test2.py  todo.py  token.py  user.py
src/templates/: login.html
src/views/: __init__.py  auth.py  cell.py  healthcheck.py  login.py  oauth.py  sheet.py  todo.py  token.py  user.py
tests/: test_cell_service.py  test_cell_views.py  test_config.py  test_login_service.py  test_product.py  test_todo_service.py  test_token.py  test_views.py
views/: user.py
